<resources>
    <string name="put_headphones">Please wear headphones or earphones to fully enjoy the experience</string>
    <string name="app_name" translatable="false">Min\'s Tales</string>
    <string name="play">Play</string>
    <string name="marketplace">Marketplace</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="show_not_owned">Show not owned</string>
    <string name="storyname">Enter story name</string>
    <string name="marketplacetagname" translatable="false">tag1, tag2, tag3...</string>
    <string name="research">Research</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="search_your_story">Search your story</string>
    <string name="stories">STORIES</string>
    <string name="marketplace_maj">MARKET PLACE</string>
    <string name="sound_settings">Sound settings</string>
    <string name="app_language">Application language</string>
    <string name="disconnect">Disconnect</string>
    <string name="modify_profile">Modify your profile</string>
    <string name="register_later"><u>Register later</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="user_name">User name</string>
    <string name="record">Record</string>
    <string name="outdated_android_version">Your android version is too old.</string>
    <string name="pronounce_action">Pronounce your actions</string>
    <string name="continue_story">Continue</string>
    <string name="start_story">Start</string>
    <string name="buy">Purchase</string>
    <string name="back">BACK</string>
    <string name="no_story_found"><b>it seems you haven\'t uploaded any story.</b>\nYou should take a look in the market place.\nSome are free, take advantage!</string>
</resources>