<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey"
    android:padding="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/leftArrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            android:text="@string/back"
            android:textStyle="bold"
            android:textColor="@color/main_yellow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/formularContainer"
        android:background="@mipmap/mins_tales_logo_round"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formularContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/mailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mailTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="25dp"
            android:text="@string/forgot_password"
            android:textColor="@color/content_font"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formularContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@drawable/yellow_rounded_border_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>