<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_grey"
    android:padding="30dp">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/formularContainer"
        android:background="@mipmap/mins_tales_logo_round"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formularContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/mailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/usernameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mailTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/user_name"/>

        <EditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInput"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_yellow"
            android:minHeight="48dp"
            android:textColorHint="@color/content_font"
            android:textColor="@color/content_font"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formularContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:hint="Sign up"/>

</androidx.constraintlayout.widget.ConstraintLayout>